FoolCompiler/SyntacticAnalysis/FOOLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from FOOL.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419


using System.Collections.Generic;

using System;
using System.IO;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class FOOLParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		SEMIC=1, COLON=2, COMMA=3, EQ=4, ASM=5, PLUS=6, MINUS=7, TIMES=8, DIV=9, 
		TRUE=10, FALSE=11, LPAR=12, RPAR=13, CLPAR=14, CRPAR=15, IF=16, THEN=17, 
		ELSE=18, LET=19, IN=20, VAR=21, FUN=22, INT=23, BOOL=24, OR=25, AND=26, 
		NOT=27, GREATERTHAN=28, LESSERTHAN=29, GREATEREQUAL=30, LESSEREQUAL=31, 
		VOID=32, CLASS=33, THIS=34, NEW=35, DOT=36, EXTENDS=37, NULL=38, INTEGER=39, 
		ID=40, WS=41, LINECOMENTS=42, BLOCKCOMENTS=43;
	public const int
		RULE_prog = 0, RULE_let = 1, RULE_classdec = 2, RULE_letVar = 3, RULE_vardec = 4, 
		RULE_varasm = 5, RULE_fun = 6, RULE_dec = 7, RULE_met = 8, RULE_type = 9, 
		RULE_exp = 10, RULE_term = 11, RULE_factor = 12, RULE_value = 13, RULE_functioncall = 14, 
		RULE_stm = 15, RULE_stms = 16;
	public static readonly string[] ruleNames = {
		"prog", "let", "classdec", "letVar", "vardec", "varasm", "fun", "dec", 
		"met", "type", "exp", "term", "factor", "value", "functioncall", "stm", 
		"stms"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "':'", "','", "'=='", "'='", "'+'", "'-'", "'*'", "'/'", 
		"'true'", "'false'", "'('", "')'", "'{'", "'}'", "'if'", "'then'", "'else'", 
		"'let'", "'in'", "'var'", "'fun'", "'int'", "'bool'", "'||'", "'&&'", 
		"'not'", "'>'", "'<'", "'>='", "'<='", "'void'", "'class'", "'this'", 
		"'new'", "'.'", "'extends'", "'null'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "SEMIC", "COLON", "COMMA", "EQ", "ASM", "PLUS", "MINUS", "TIMES", 
		"DIV", "TRUE", "FALSE", "LPAR", "RPAR", "CLPAR", "CRPAR", "IF", "THEN", 
		"ELSE", "LET", "IN", "VAR", "FUN", "INT", "BOOL", "OR", "AND", "NOT", 
		"GREATERTHAN", "LESSERTHAN", "GREATEREQUAL", "LESSEREQUAL", "VOID", "CLASS", 
		"THIS", "NEW", "DOT", "EXTENDS", "NULL", "INTEGER", "ID", "WS", "LINECOMENTS", 
		"BLOCKCOMENTS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "FOOL.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static FOOLParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public FOOLParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public FOOLParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgContext : ParserRuleContext {
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
	 
		public ProgContext() { }
		public virtual void CopyFrom(ProgContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ClassExpContext : ProgContext {
		public ITerminalNode IN() { return GetToken(FOOLParser.IN, 0); }
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public ITerminalNode SEMIC() { return GetToken(FOOLParser.SEMIC, 0); }
		public StmsContext stms() {
			return GetRuleContext<StmsContext>(0);
		}
		public ClassdecContext[] classdec() {
			return GetRuleContexts<ClassdecContext>();
		}
		public ClassdecContext classdec(int i) {
			return GetRuleContext<ClassdecContext>(i);
		}
		public LetContext let() {
			return GetRuleContext<LetContext>(0);
		}
		public ClassExpContext(ProgContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFOOLVisitor<TResult> typedVisitor = visitor as IFOOLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassExp(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LetInExpContext : ProgContext {
		public LetContext let() {
			return GetRuleContext<LetContext>(0);
		}
		public ITerminalNode IN() { return GetToken(FOOLParser.IN, 0); }
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public ITerminalNode SEMIC() { return GetToken(FOOLParser.SEMIC, 0); }
		public StmsContext stms() {
			return GetRuleContext<StmsContext>(0);
		}
		public LetInExpContext(ProgContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFOOLVisitor<TResult> typedVisitor = visitor as IFOOLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLetInExp(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class SingleExpContext : ProgContext {
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public ITerminalNode SEMIC() { return GetToken(FOOLParser.SEMIC, 0); }
		public SingleExpContext(ProgContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFOOLVisitor<TResult> typedVisitor = visitor as IFOOLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSingleExp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(Context, State);
		EnterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			State = 60;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case MINUS:
			case TRUE:
			case FALSE:
			case LPAR:
			case IF:
			case NOT:
			case NEW:
			case INTEGER:
			case ID:
				_localctx = new SingleExpContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 34; exp();
				State = 35; Match(SEMIC);
				}
				break;
			case LET:
				_localctx = new LetInExpContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 37; let();
				State = 38; Match(IN);
				State = 43;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
				case 1:
					{
					State = 39; exp();
					State = 40; Match(SEMIC);
					}
					break;
				case 2:
					{
					State = 42; stms();
					}
					break;
				}
				}
				break;
			case CLASS:
				_localctx = new ClassExpContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 46;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 45; classdec();
					}
					}
					State = 48;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( _la==CLASS );
				State = 51;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==LET) {
					{
					State = 50; let();
					}
				}

				State = 53; Match(IN);
				State = 58;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
				case 1:
					{
					State = 54; exp();
					State = 55; Match(SEMIC);
					}
					break;
				case 2:
					{
					State = 57; stms();
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LetContext : ParserRuleContext {
		public ITerminalNode LET() { return GetToken(FOOLParser.LET, 0); }
		public DecContext[] dec() {
			return GetRuleContexts<DecContext>();
		}
		public DecContext dec(int i) {
			return GetRuleContext<DecContext>(i);
		}
		public ITerminalNode[] SEMIC() { return GetTokens(FOOLParser.SEMIC); }
		public ITerminalNode SEMIC(int i) {
			return GetToken(FOOLParser.SEMIC, i);
		}
		public LetContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_let; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFOOLVisitor<TResult> typedVisitor = visitor as IFOOLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLet(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LetContext let() {
		LetContext _localctx = new LetContext(Context, State);
		EnterRule(_localctx, 2, RULE_let);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62; Match(LET);
			State = 66;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 63; dec();
				State = 64; Match(SEMIC);
				}
				}
				State = 68;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOL) | (1L << VOID) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassdecContext : ParserRuleContext {
		public ITerminalNode CLASS() { return GetToken(FOOLParser.CLASS, 0); }
		public ITerminalNode[] ID() { return GetTokens(FOOLParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(FOOLParser.ID, i);
		}
		public ITerminalNode SEMIC() { return GetToken(FOOLParser.SEMIC, 0); }
		public ITerminalNode EXTENDS() { return GetToken(FOOLParser.EXTENDS, 0); }
		public ITerminalNode LPAR() { return GetToken(FOOLParser.LPAR, 0); }
		public VardecContext[] vardec() {
			return GetRuleContexts<VardecContext>();
		}
		public VardecContext vardec(int i) {
			return GetRuleContext<VardecContext>(i);
		}
		public ITerminalNode RPAR() { return GetToken(FOOLParser.RPAR, 0); }
		public ITerminalNode CLPAR() { return GetToken(FOOLParser.CLPAR, 0); }
		public ITerminalNode CRPAR() { return GetToken(FOOLParser.CRPAR, 0); }
		public ITerminalNode[] COMMA() { return GetTokens(FOOLParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(FOOLParser.COMMA, i);
		}
		public MetContext[] met() {
			return GetRuleContexts<MetContext>();
		}
		public MetContext met(int i) {
			return GetRuleContext<MetContext>(i);
		}
		public ClassdecContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classdec; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFOOLVisitor<TResult> typedVisitor = visitor as IFOOLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassdec(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassdecContext classdec() {
		ClassdecContext _localctx = new ClassdecContext(Context, State);
		EnterRule(_localctx, 4, RULE_classdec);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70; Match(CLASS);
			State = 71; Match(ID);
			State = 74;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==EXTENDS) {
				{
				State = 72; Match(EXTENDS);
				State = 73; Match(ID);
				}
			}

			State = 87;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LPAR) {
				{
				State = 76; Match(LPAR);
				State = 77; vardec();
				State = 82;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==COMMA) {
					{
					{
					State = 78; Match(COMMA);
					State = 79; vardec();
					}
					}
					State = 84;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 85; Match(RPAR);
				}
			}

			State = 97;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==CLPAR) {
				{
				State = 89; Match(CLPAR);
				State = 93;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOL) | (1L << VOID) | (1L << ID))) != 0)) {
					{
					{
					State = 90; met();
					}
					}
					State = 95;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 96; Match(CRPAR);
				}
			}

			State = 99; Match(SEMIC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LetVarContext : ParserRuleContext {
		public ITerminalNode LET() { return GetToken(FOOLParser.LET, 0); }
		public VarasmContext[] varasm() {
			return GetRuleContexts<VarasmContext>();
		}
		public VarasmContext varasm(int i) {
			return GetRuleContext<VarasmContext>(i);
		}
		public LetVarContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_letVar; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFOOLVisitor<TResult> typedVisitor = visitor as IFOOLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLetVar(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LetVarContext letVar() {
		LetVarContext _localctx = new LetVarContext(Context, State);
		EnterRule(_localctx, 6, RULE_letVar);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101; Match(LET);
			State = 103;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 102; varasm();
				}
				}
				State = 105;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOL) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VardecContext : ParserRuleContext {
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ITerminalNode ID() { return GetToken(FOOLParser.ID, 0); }
		public VardecContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_vardec; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFOOLVisitor<TResult> typedVisitor = visitor as IFOOLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVardec(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VardecContext vardec() {
		VardecContext _localctx = new VardecContext(Context, State);
		EnterRule(_localctx, 8, RULE_vardec);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107; type();
			State = 108; Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarasmContext : ParserRuleContext {
		public VardecContext vardec() {
			return GetRuleContext<VardecContext>(0);
		}
		public ITerminalNode ASM() { return GetToken(FOOLParser.ASM, 0); }
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public ITerminalNode NULL() { return GetToken(FOOLParser.NULL, 0); }
		public VarasmContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_varasm; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFOOLVisitor<TResult> typedVisitor = visitor as IFOOLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVarasm(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VarasmContext varasm() {
		VarasmContext _localctx = new VarasmContext(Context, State);
		EnterRule(_localctx, 10, RULE_varasm);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110; vardec();
			State = 111; Match(ASM);
			State = 114;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case MINUS:
			case TRUE:
			case FALSE:
			case LPAR:
			case IF:
			case NOT:
			case NEW:
			case INTEGER:
			case ID:
				{
				State = 112; exp();
				}
				break;
			case NULL:
				{
				State = 113; Match(NULL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(FOOLParser.ID, 0); }
		public ITerminalNode LPAR() { return GetToken(FOOLParser.LPAR, 0); }
		public ITerminalNode RPAR() { return GetToken(FOOLParser.RPAR, 0); }
		public ITerminalNode CLPAR() { return GetToken(FOOLParser.CLPAR, 0); }
		public ITerminalNode CRPAR() { return GetToken(FOOLParser.CRPAR, 0); }
		public ITerminalNode VOID() { return GetToken(FOOLParser.VOID, 0); }
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public ITerminalNode SEMIC() { return GetToken(FOOLParser.SEMIC, 0); }
		public StmsContext stms() {
			return GetRuleContext<StmsContext>(0);
		}
		public VardecContext[] vardec() {
			return GetRuleContexts<VardecContext>();
		}
		public VardecContext vardec(int i) {
			return GetRuleContext<VardecContext>(i);
		}
		public LetVarContext letVar() {
			return GetRuleContext<LetVarContext>(0);
		}
		public ITerminalNode IN() { return GetToken(FOOLParser.IN, 0); }
		public ITerminalNode[] COMMA() { return GetTokens(FOOLParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(FOOLParser.COMMA, i);
		}
		public FunContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fun; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFOOLVisitor<TResult> typedVisitor = visitor as IFOOLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFun(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunContext fun() {
		FunContext _localctx = new FunContext(Context, State);
		EnterRule(_localctx, 12, RULE_fun);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 118;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case VOID:
				{
				State = 116; Match(VOID);
				}
				break;
			case INT:
			case BOOL:
			case ID:
				{
				State = 117; type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 120; Match(ID);
			State = 121; Match(LPAR);
			State = 130;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOL) | (1L << ID))) != 0)) {
				{
				State = 122; vardec();
				State = 127;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==COMMA) {
					{
					{
					State = 123; Match(COMMA);
					State = 124; vardec();
					}
					}
					State = 129;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
			}

			State = 132; Match(RPAR);
			State = 133; Match(CLPAR);
			State = 137;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LET) {
				{
				State = 134; letVar();
				State = 135; Match(IN);
				}
			}

			State = 143;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,17,Context) ) {
			case 1:
				{
				State = 139; exp();
				State = 140; Match(SEMIC);
				}
				break;
			case 2:
				{
				State = 142; stms();
				}
				break;
			}
			State = 145; Match(CRPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DecContext : ParserRuleContext {
		public VarasmContext varasm() {
			return GetRuleContext<VarasmContext>(0);
		}
		public FunContext fun() {
			return GetRuleContext<FunContext>(0);
		}
		public DecContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dec; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFOOLVisitor<TResult> typedVisitor = visitor as IFOOLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDec(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DecContext dec() {
		DecContext _localctx = new DecContext(Context, State);
		EnterRule(_localctx, 14, RULE_dec);
		try {
			State = 149;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,18,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 147; varasm();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 148; fun();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MetContext : ParserRuleContext {
		public FunContext fun() {
			return GetRuleContext<FunContext>(0);
		}
		public MetContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_met; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFOOLVisitor<TResult> typedVisitor = visitor as IFOOLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMet(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MetContext met() {
		MetContext _localctx = new MetContext(Context, State);
		EnterRule(_localctx, 16, RULE_met);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 151; fun();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		public ITerminalNode INT() { return GetToken(FOOLParser.INT, 0); }
		public ITerminalNode BOOL() { return GetToken(FOOLParser.BOOL, 0); }
		public ITerminalNode ID() { return GetToken(FOOLParser.ID, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFOOLVisitor<TResult> typedVisitor = visitor as IFOOLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeContext type() {
		TypeContext _localctx = new TypeContext(Context, State);
		EnterRule(_localctx, 18, RULE_type);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 153;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOL) | (1L << ID))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpContext : ParserRuleContext {
		public TermContext left;
		public ExpContext right;
		public TermContext term() {
			return GetRuleContext<TermContext>(0);
		}
		public ITerminalNode PLUS() { return GetToken(FOOLParser.PLUS, 0); }
		public ITerminalNode MINUS() { return GetToken(FOOLParser.MINUS, 0); }
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public ExpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_exp; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFOOLVisitor<TResult> typedVisitor = visitor as IFOOLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpContext exp() {
		ExpContext _localctx = new ExpContext(Context, State);
		EnterRule(_localctx, 20, RULE_exp);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 155; _localctx.left = term();
			State = 158;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==PLUS || _la==MINUS) {
				{
				State = 156;
				_la = TokenStream.LA(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 157; _localctx.right = exp();
				}
			}
